@@ -407,7 +407,7 @@ static const BxOpcodeInfo_t BxOpcodeInfoG7[64+8] = {
   /* 0F 01 D1 */ { BxPrefixSSE | BxTraceEnd, BX_IA_XSETBV, BxOpcodeGroupSSE_ERR },
   /* 0F 01 D2 */ { 0, BX_IA_ERROR },
   /* 0F 01 D3 */ { 0, BX_IA_ERROR },
-  /* 0F 01 D4 */ { 0, BX_IA_ERROR },
+  /* 0F 01 D4 */ { BxTraceEnd | BxPrefixSSE, BX_IA_VMFUNC, BxOpcodeGroupSSE_ERR },
   /* 0F 01 D5 */ { 0, BX_IA_ERROR },
   /* 0F 01 D6 */ { 0, BX_IA_ERROR },
   /* 0F 01 D7 */ { 0, BX_IA_ERROR },
@@ -486,7 +486,7 @@ static const BxOpcodeInfo_t BxOpcodeInfoG7q[64+8] = {
   /* 0F 01 D1 */ { BxPrefixSSE | BxTraceEnd, BX_IA_XSETBV, BxOpcodeGroupSSE_ERR },
   /* 0F 01 D2 */ { 0, BX_IA_ERROR },
   /* 0F 01 D3 */ { 0, BX_IA_ERROR },
-  /* 0F 01 D4 */ { 0, BX_IA_ERROR },
+  /* 0F 01 D4 */ { BxTraceEnd | BxPrefixSSE, BX_IA_VMFUNC, BxOpcodeGroupSSE_ERR },
   /* 0F 01 D5 */ { 0, BX_IA_ERROR },
   /* 0F 01 D6 */ { 0, BX_IA_ERROR },
   /* 0F 01 D7 */ { 0, BX_IA_ERROR },
